# LPE

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE.md  NOTICE  README.md
LPE-CT/: Cargo.toml  README.md
LPE-CT/docs/architecture/: center-de-tri.md
LPE-CT/docs/operations/: mail-filtering.md
LPE-CT/installation/debian-trixie/: check-lpe-ct-env.sh  check-lpe-ct-ready.sh  check-lpe-ct.sh  install-lpe-ct.sh  keepalived-lpe-ct.conf.example  lpe-ct-ha-set-role.sh  lpe-ct-host-action.sh  lpe-ct-spool-recover.sh  lpe-ct.env.example  lpe-ct.nginx.conf  lpe-ct.service  sync-takeri.sh  test-antivirus-lpe-ct.sh  test-from-internet.sh  test-from-lpe.sh  test-ha-lpe-ct-active-passive.sh  test-local-lpe-ct.sh  test-lpe-ct-core-bridge.sh  test-lpe-ct-edge-ports.sh  test-lpe-ct-spool-recovery.sh  update-lpe-ct.sh
LPE-CT/src/: dashboard_config.rs  dkim_signing.rs  host_logs.rs  http_routes.rs  imaps_proxy.rs  main.rs  management_auth.rs  observability.rs  outlook_test_message.rs  readiness.rs  reporting.rs  smtp.rs  storage.rs  submission.rs  system_actions.rs  system_diagnostics.rs  system_metrics.rs  transport_policy.rs
LPE-CT/src/reporting/: tests.rs
LPE-CT/src/smtp/: anti_abuse.rs  antivirus.rs  audit.rs  auth.rs  bayes.rs  delivery_bridge.rs  dns.rs  dsn.rs  inbound_policy.rs  outbound.rs  outbound_delivery.rs  outbound_policy.rs  policy.rs  protocol.rs  quarantine.rs  queue_store.rs  reputation.rs  session.rs  tests.rs  tls.rs  trace.rs  trace_actions.rs
LPE-CT/web/: app.js  app.smoke.test.cjs  i18n.js  index.html  styles.css
LPE-CT/web/modules/: README.md
LPE-CT/web/modules/app/: api.js  context.js  dashboard.js  format.js  lists.js  policy-drawers.js  system.js  trace-actions.js  ui.js
LPE-CT/web/modules/i18n/: README.md  index.js  localized-messages.js  messages.js
LPE-CT/web/modules/pages/: anti-spam.js  dashboard.js  filtering.js  index.js  logs.js  page-module.js  quarantine.js  reporting.js  system-setup.js
LPE-CT/web/styles/: base.css  dashboard.css  diagnostics.css  management.css  navigation.css  overlays.css  responsive.css
crates/lpe-admin-api/: Cargo.toml
crates/lpe-admin-api/src/: access.rs  account_oidc.rs  admin_auth.rs  app.rs  bootstrap.rs  client_auth.rs  client_config.rs  console.rs  delegation.rs  health.rs  http.rs  integration.rs  lib.rs  observability.rs  oidc.rs  pst.rs  readiness.rs  security.rs  sieve.rs  snapshots.rs  storage.rs  totp.rs  types.rs  util.rs  workspace.rs
crates/lpe-admin-api/src/client_config/: tests.rs
crates/lpe-admin-api/src/workspace/: public_folders.rs  tests.rs
crates/lpe-cli/: Cargo.toml  build.rs
crates/lpe-cli/src/: main.rs
crates/lpe-core/: Cargo.toml
crates/lpe-core/src/: lib.rs  outlook_trace.rs  service.rs  sieve.rs
crates/lpe-dav/: Cargo.toml
crates/lpe-dav/src/: lib.rs  parse.rs  paths.rs  preconditions.rs  propfind.rs  report.rs  responses.rs  serialize.rs  service.rs  store.rs  tests.rs
crates/lpe-exchange/: Cargo.toml  build.rs
crates/lpe-exchange/src/: build_info.rs  ews_types.rs  lib.rs  mapi.rs  mapi_mailstore.rs  mapi_store.rs  microsoft_protocol_audit.rs  ntlm.rs  service.rs  store.rs  tests.rs
crates/lpe-exchange/src/mapi/: dispatch.rs  handler.rs  identity.rs  notifications.rs  nspi.rs  outlook_startup.rs  permissions.rs  properties.rs  rop.rs  session.rs  store_adapter.rs  sync.rs  tables.rs  transport.rs  wire.rs
crates/lpe-exchange/src/mapi_mailstore/: client_state.rs  diagnostics.rs  folders.rs  manifest.rs  special_message.rs  tests.rs
crates/lpe-exchange/src/mapi_store/: associated_config.rs  folder_versions.rs  snapshot.rs  tests.rs
crates/lpe-imap/: Cargo.toml
crates/lpe-imap/src/: acl.rs  append.rs  auth.rs  idle.rs  lib.rs  mailboxes.rs  messages.rs  parse.rs  render.rs  search.rs  service.rs  store.rs  store_args.rs  tests.rs  uid.rs
crates/lpe-jmap/: Cargo.toml
crates/lpe-jmap/src/: backbone.rs  blob.rs  calendar.rs  contacts.rs  convert.rs  drafts.rs  error.rs  eventsource.rs  lib.rs  mail.rs  mailboxes.rs  notes_journal.rs  parse.rs  protocol.rs  service.rs  session.rs  state.rs  store.rs  tasks.rs  tests.rs  upload.rs  vacation.rs  validation.rs  websocket.rs
crates/lpe-mail-auth/: Cargo.toml
crates/lpe-mail-auth/src/: auth.rs  lib.rs  oauth.rs  store.rs  tests.rs
crates/lpe-managesieve/: Cargo.toml
crates/lpe-managesieve/src/: auth.rs  lib.rs  parse.rs  service.rs  store.rs  tests.rs
crates/lpe-storage/: Cargo.toml
crates/lpe-storage/migrations/: 0001_initial.sql  0002_admin_console.sql  0003_admin_console_sections.sql  0004_mailbox_pst_jobs.sql  0005_message_submission.sql  0006_admin_auth.sql  0006_lpe_ct_integration.sql  0007_outbound_transport_status_details.sql  0007_pst_job_execution.sql  0008_account_credentials.sql  0009_account_sessions.sql  0010_client_workspace.sql  0011_bcc_protected_metadata.sql  0012_jmap_upload_blobs.sql  0013_activesync_sync_state.sql  0014_attachment_blob_dedup.sql  0015_imap_uids.sql  0016_tasks.sql  0017_calendar_interop.sql  0018_admin_oidc_iam.sql  0019_multi_tenant_runtime.sql  0020_sieve_managesieve.sql  0021_collaboration_acl.sql  0022_account_modern_auth.sql  0023_mailbox_delegation.sql  0024_management_extensions.sql
crates/lpe-storage/sql/: create_lpe_schema.sql  schema.sql
crates/lpe-storage/src/: activesync.rs  admin.rs  attachments.rs  auth.rs  blob_store.rs  calendar.rs  change.rs  collaboration.rs  conversation_actions.rs  core.rs  imap.rs  inbound.rs  jmap_blobs.rs  jmap_queries.rs  lib.rs  mail.rs  mail_items.rs  mailboxes.rs  mapi_contacts.rs  mapi_events.rs  message_ops.rs  models.rs  notes_journal.rs  outbound.rs  protocols.rs  pst.rs  public_folders.rs  recoverable_items.rs  schema_contract.rs  search_folders.rs  shared.rs  storage_backend.rs  storage_policy.rs  storage_visibility.rs  submission.rs  tasks.rs  types.rs  util.rs  workspace.rs
crates/lpe-storage/tests/: mapi_contact_create.rs  mapi_event_commit.rs  outlook_cache_fidelity_update.rs  runtime_schema_drift.rs  schema_051_contract.rs  schema_051_update.rs
(+534 files in other folders)
