[package]
name = "lpe-ct"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["LPE Contributors"]
description = "DMZ sorting center management plane for LPE"

[dependencies]
anyhow = "1.0"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace]
