[package]
name = "lpe-ct"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["LPE Contributors"]
description = "DMZ sorting center management plane for LPE"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
email-auth = "0.1.2"
hickory-resolver = { version = "0.25.2", features = ["tokio", "system-config"] }
lpe-domain = { path = "../crates/lpe-domain" }
lpe-magika = { path = "../crates/lpe-magika" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
rustls-pemfile = "2.2"

[workspace]

