[package]
name = "lpe-admin-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
lpe-activesync = { path = "../lpe-activesync" }
lpe-ai = { path = "../lpe-ai" }
lpe-attachments = { path = "../lpe-attachments" }
lpe-core = { path = "../lpe-core" }
lpe-dav = { path = "../lpe-dav" }
lpe-domain = { path = "../lpe-domain" }
lpe-exchange = { path = "../lpe-exchange" }
lpe-jmap = { path = "../lpe-jmap" }
lpe-magika = { path = "../lpe-magika" }
lpe-mail-auth = { path = "../lpe-mail-auth" }
lpe-storage = { path = "../lpe-storage" }
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
base64.workspace = true
reqwest.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
