[package]
name = "lpe-admin-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["protocols"]
protocols = ["activesync", "dav", "exchange", "jmap"]
activesync = ["dep:lpe-activesync"]
dav = ["dep:lpe-dav"]
exchange = ["dep:lpe-exchange"]
jmap = ["dep:lpe-jmap"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
lpe-activesync = { path = "../lpe-activesync", optional = true }
lpe-ai = { path = "../lpe-ai" }
lpe-attachments = { path = "../lpe-attachments" }
lpe-core = { path = "../lpe-core" }
lpe-dav = { path = "../lpe-dav", optional = true }
lpe-domain = { path = "../lpe-domain" }
lpe-exchange = { path = "../lpe-exchange", optional = true }
lpe-jmap = { path = "../lpe-jmap", optional = true }
lpe-magika = { path = "../lpe-magika" }
lpe-mail-auth = { path = "../lpe-mail-auth" }
lpe-storage = { path = "../lpe-storage" }
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
base64.workspace = true
reqwest.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
quick-xml.workspace = true
tower.workspace = true
