[package]
name = "lpe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
lpe-admin-api = { path = "../lpe-admin-api" }
lpe-storage = { path = "../lpe-storage" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

