[package]
name = "lpe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
lpe-admin-api = { path = "../lpe-admin-api" }
lpe-domain = { path = "../lpe-domain" }
lpe-imap = { path = "../lpe-imap" }
lpe-managesieve = { path = "../lpe-managesieve" }
lpe-storage = { path = "../lpe-storage" }
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

