[package]
name = "lpe-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
lpe-ai = { path = "../lpe-ai" }
lpe-attachments = { path = "../lpe-attachments" }
lpe-domain = { path = "../lpe-domain" }
tracing.workspace = true
uuid.workspace = true
