[package]
name = "lpe-exchange"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
lpe-mail-auth = { path = "../lpe-mail-auth" }
lpe-storage = { path = "../lpe-storage" }
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
