[package]
name = "lpe-exchange"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
lpe-mail-auth = { path = "../lpe-mail-auth" }
lpe-magika = { path = "../lpe-magika" }
lpe-core = { path = "../lpe-core" }
lpe-storage = { path = "../lpe-storage" }
sqlx.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
