[package]
name = "lpe-jmap"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
lpe-magika = { path = "../lpe-magika" }
lpe-storage = { path = "../lpe-storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]

