[package]
name = "lpe-mail-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
hmac.workspace = true
lpe-storage = { path = "../lpe-storage" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
