[package]
name = "lpe-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
lpe-attachments = { path = "../lpe-attachments" }
lpe-domain = { path = "../lpe-domain" }
lpe-magika = { path = "../lpe-magika" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
uuid.workspace = true

