[package]
name = "lpe-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
hmac.workspace = true
idna.workspace = true
lpe-core = { path = "../lpe-core" }
lpe-domain = { path = "../lpe-domain" }
lpe-magika = { path = "../lpe-magika" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

